--- a/LevonTest/Base.lproj/Main.storyboard
+++ b/LevonTest/Base.lproj/Main.storyboard
@@ -10,10 +10,11 @@
         <scene sceneID="ke0-1A-jHd">
             <objects>
                 <tableViewController id="pw4-NW-Jzu" customClass="TableViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="50" sectionHeaderHeight="28" sectionFooterHeight="28" id="dCE-P8-AVG">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="50" sectionHeaderHeight="28" sectionFooterHeight="28" id="dCE-P8-AVG">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <inset key="separatorInset" minX="20" minY="0.0" maxX="20" maxY="0.0"/>
                         <view key="tableHeaderView" contentMode="scaleToFill" id="edS-9d-jw6">
                             <rect key="frame" x="0.0" y="64" width="600" height="206"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -28,7 +29,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c2X-xz-mBj">
-                                    <rect key="frame" x="168" y="75" width="264" height="56"/>
+                                    <rect key="frame" x="168" y="65" width="264" height="56"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="56" id="3ns-PK-DRm"/>
                                         <constraint firstAttribute="width" constant="264" id="r8g-FZ-NY7"/>
@@ -54,7 +55,7 @@
                                 <constraint firstItem="c2X-xz-mBj" firstAttribute="centerX" secondItem="edS-9d-jw6" secondAttribute="centerX" id="A3n-rU-fsY"/>
                                 <constraint firstItem="g83-J2-MGE" firstAttribute="centerX" secondItem="edS-9d-jw6" secondAttribute="centerX" id="Ah7-qX-Dhx"/>
                                 <constraint firstAttribute="trailing" secondItem="buZ-H9-c8I" secondAttribute="trailing" id="X7j-FB-k4V"/>
-                                <constraint firstItem="c2X-xz-mBj" firstAttribute="top" secondItem="buZ-H9-c8I" secondAttribute="bottom" constant="10" id="Y3q-et-5y3"/>
+                                <constraint firstItem="c2X-xz-mBj" firstAttribute="top" secondItem="buZ-H9-c8I" secondAttribute="bottom" id="Y3q-et-5y3"/>
                                 <constraint firstItem="buZ-H9-c8I" firstAttribute="top" secondItem="edS-9d-jw6" secondAttribute="top" constant="15" id="bQZ-Ux-3Vw"/>
                                 <constraint firstItem="g83-J2-MGE" firstAttribute="top" secondItem="buZ-H9-c8I" secondAttribute="bottom" constant="58" id="ixY-oE-sMc"/>
                             </constraints>
@@ -333,7 +334,7 @@
                             </constraints>
                         </view>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellReuseIdentifier" rowHeight="50" id="Hd2-2o-VK9" customClass="TableViewCell">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="cellReuseIdentifier" rowHeight="50" id="Hd2-2o-VK9" customClass="TableViewCell">
                                 <rect key="frame" x="0.0" y="298" width="600" height="50"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Hd2-2o-VK9" id="tuy-DV-YX9">
@@ -391,6 +392,7 @@
                                         </mask>
                                     </variation>
                                 </tableViewCellContentView>
+                                <inset key="separatorInset" minX="20" minY="0.0" maxX="20" maxY="0.0"/>
                                 <connections>
                                     <outlet property="dayOfWeek" destination="Gbx-4E-ybG" id="l6h-Nc-7IH"/>
                                     <outlet property="maxTemp" destination="Yka-bB-vX1" id="PCK-EY-DEN"/>
